condition component redering with input field on edit state.  needs tweeking to prevent reshifting of positions.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,7 @@ button:focus {
 .health-info:hover .fa-user-edit {
   color: green !important;
 }
+
+.condition-info:hover .fa-user-edit {
+  color: green !important;
+}
